--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
 <html>
 	<head>
 		<meta charset="utf-8">
+        <title>Firecapot</title>
+        <link rel="stylesheet" href="assets/css/main.css">
+        <link rel="stylesheet" href="assets/css/reset.css">     
+        <script src="assets/js/main.js"></script>
 	</head>
-	<body>
+	<body>        
         <h1>Hello matherfucer</h1>
         <img draggable='false' src="https://scriptwerx.io/content/images/2016/05/sessionstorage-1.png" 
 	</body>
