--- a/index.html
+++ b/index.html
@@ -7,9 +7,38 @@
         <link rel="stylesheet" href="assets/css/reset.css">     
         <script src="assets/js/main.js"></script>
 	</head>
-	<body>        
-        <h1>Hello matherfucer</h1>
-        <h1>Адрей чудилооо!</h1>
-        <img draggable='false' src="https://scriptwerx.io/content/images/2016/05/sessionstorage-1.png" 
+	<body>  
+        <div class="container-menu">
+            <nav>
+                <ul>
+                    <li>
+                        <a href="index.html">
+                            item1
+                        </a>
+                    </li>
+                    <li>
+                        <a href="index2.html">
+                            item2
+                        </a>
+                        
+                        <ul class="dropdown">
+                            <li><a href="">item2.1</a></li>
+                            <li><a href="">item2.2</a></li>
+                            <li><a href="">item2.3</a></li>
+                        </ul>                  
+                    </li>
+                    <li>
+                        <a href="">
+                            item3
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            item4
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
 	</body>
 </html>
