--- a/index.html
+++ b/index.html
@@ -3,42 +3,58 @@
 	<head>
 		<meta charset="utf-8">
         <title>Firecapot</title>
-        <link rel="stylesheet" href="assets/css/main.css">
-        <link rel="stylesheet" href="assets/css/reset.css">     
+        <link rel="stylesheet" href="assets/css/main2.css">
+        <link rel="stylesheet" href="assets/css/reset.css">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
         <script src="assets/js/main.js"></script>
 	</head>
-	<body>  
-        <div class="container-menu">
-            <nav>
-                <ul>
-                    <li>
-                        <a href="index.html">
-                            item1
-                        </a>
-                    </li>
-                    <li>
-                        <a href="index2.html">
-                            item2
-                        </a>
-                        
-                        <ul class="dropdown">
-                            <li><a href="">item2.1</a></li>
-                            <li><a href="">item2.2</a></li>
-                            <li><a href="">item2.3</a></li>
-                        </ul>                  
-                    </li>
-                    <li>
-                        <a href="">
-                            item3
-                        </a>
-                    </li>
-                    <li>
-                        <a href="">
-                            item4
-                        </a>
-                    </li>
-                </ul>
-            </nav>
+	<body>
+        <div class="left-col">
+            <div class="container-img">
+                <img src="https://html5up.net/uploads/demos/prologue/images/avatar.jpg">
+                <div class="container-name">
+                    <h3>Name</h3>
+                    <p>description</p>
+                </div>
+            </div>
+            <div class="container-menu">
+                <nav>
+                    <ul>
+                        <li>
+                            <a href="index.html">
+                                <i class="material-icons">home</i>
+                                <span>Page One</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="index2.html">
+                                <i class="material-icons">home</i>
+                                <span>Page Two</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <i class="material-icons">home</i>
+                                <span>index3</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <i class="material-icons">home</i>
+                                <span>index4</span>
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="social-container">
+                <a href=""><i class="material-icons">public</i></a>
+                <a href=""><i class="material-icons">message</i></a>
+                <a href=""><i class="material-icons">android</i></a> 
+                <a href=""><i class="material-icons">gavel</i></a>  
+                <a href=""><i class="material-icons">rowing</i></a> 
+            </div>
         </div>
 	</body>
 </html>
