home-panel finish

--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
                     </a>
                 </article>
                 
-                <article id="work" class="panel">
+                <article id="work-panel" class="panel">
                     Work
                 </article>
                 
-                <article id="contact" class="panel">
+                <article id="contact-panel" class="panel">
                     Contact
                 </article>
             </div>
