--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
             
             <div class="footer">
                 <p>
-                    <span>Victoria</span>
-                    <span>is</span>
-                    <span>small popka</span>
+                    <span>my</span>
+                    <span>personal</span>
+                    <span>site</span>
                 </p>
             </div>
         </div>        
